--- a/index.html
+++ b/index.html
@@ -2213,5 +2213,20 @@
                 }, 3000);
             }
         </script>
+
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-VWQ3CKK40T"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+
+            gtag("config", "G-VWQ3CKK40T");
+        </script>
     </body>
 </html>
