This BA ZI CALCULATOR describes a point in time.

--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
 
                 <section aria-labelledby="input-title" class="relative">
                     <h2 id="input-title" class="section-title uppercase center">
-                        Enter Birth data
+                        Enter Date
                     </h2>
                     <form
                         class="section-card"
@@ -1224,6 +1224,14 @@
             <footer>
                 <div class="container footwrap">
                     <section class="badges" aria-label="Project information">
+                        <span class="validation-badge">
+                            ✓ This BA ZI CALCULATOR describes a point in time.
+                            An ancient way to talk about the universe
+                            considering we are part of it, It's also a clock
+                            system, for illiterate commoners. And a mnemonic
+                            tools, a Thought Pump. Analphabet ready. Pretty
+                            cool!
+                        </span>
                         <span class="validation-badge">
                             ✓ This Open Source webapp is made from first
                             principles. Zero Dependencies. No build step.
