--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         <link rel="canonical" href="https://bazi.junglestar.org" />
 
         <title>
-            Ba Zi 八字 - Astronomically Accurate Pillars Calculator | JUNGLESTAR
+            Ba Zi 八字 - Astronomically-accurate Potentiality-pillars Calculator
+            | JUNGLESTAR
         </title>
         <style>
             :root {
@@ -1225,17 +1226,37 @@
                 <div class="container footwrap">
                     <section class="badges" aria-label="Project information">
                         <span class="validation-badge">
-                            ✓ This BA ZI CALCULATOR describes a point in time.
-                            An ancient way to talk about the universe
-                            considering we are part of it, It's also a clock
-                            system, for illiterate commoners. And a mnemonic
-                            tools, a Thought Pump. Analphabet ready. Pretty
-                            cool!
+                            ✓ This 八字 BA ZI CALCULATOR describes a point in
+                            time. It's also a Clock System, a Metaphor System
+                            for Illiterate Commoners.
                         </span>
+
                         <span class="validation-badge">
-                            ✓ This Open Source webapp is made from first
-                            principles. Zero Dependencies. No build step.
+                            ✓ 八字 BA ZI is used as potentiality indicator, a
+                            Mnemonic Tools, a Thought Pump. Analphabet ready.
+                            Pretty cool!
                         </span>
+
+                        <span class="validation-badge">
+                            ✓ 八字 BA ZI Is based on an ancient way to talk
+                            about the universe considering we are part of it.
+                            It's roots concepts are that we not separated from
+                            nature, not made, but coming out of this people-ing
+                            world.
+                        </span>
+
+                        <span class="validation-badge">
+                            ✓ 八字 BA ZI had, and still have, a huge relevance
+                            where offspring's marriages are managed by the
+                            family.
+                        </span>
+
+                        <span class="validation-badge">
+                            ✓ This Open Source BA ZI Calculator webapp is made
+                            from first principles. Zero Dependencies. No build
+                            step.
+                        </span>
+
                         <span class="validation-badge">
                             ✓ Mathematics: Cold Dew 1967 Validated to ±0.001°
                         </span>
